# docs/swagger.json
@@ -337,11 +337,21 @@
         },
         "http.createCompanyRequest": {
             "type": "object",
+            "required": [
+                "id",
+                "name",
+                "amount_of_employees",
+                "registered",
+                "type"
+            ],
             "properties": {
                 "amount_of_employees": {
                     "type": "integer"
                 },
                 "description": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 },
                 "name": {
